--- a/Amazon Clone/index.html
+++ b/Amazon Clone/index.html
@@ -12,6 +12,7 @@
    </head>
    <body>
       <div id="root"></div>
+      <div id="gemini-modal"></div>
       <script type="module" src="/src/main.jsx"></script>
    </body>
 </html>
