--- a/Amazon Clone/index.html
+++ b/Amazon Clone/index.html
@@ -11,8 +11,8 @@
       <title>Amazon</title>
    </head>
    <body>
+      <div id="gemini-modal" style="position: relative" />
       <div id="root"></div>
-      <div id="gemini-modal"></div>
       <script type="module" src="/src/main.jsx"></script>
    </body>
 </html>
